# vanttec_controllers

./: CMakeLists.txt  README.md  package.xml  vtec_u4_model_nodelet.xml
common_lib/include/: common.hpp
common_lib/src/: common.cpp
config/: VTec_U4_ANTSMC_Gains.yaml  VTec_U4_ASMC_Gains.yaml  VTec_U4_PID_Gains.yaml
controllers/TOCHECKguidance_laws/: stanley_controller.cpp  stanley_controller.hpp
controllers/guidance_laws/: LOS.cpp  LOS.hpp  stanley_controller.cpp  stanley_controller.hpp
controllers/guidance_laws/src/: LOS.cpp  (+2 more)
dynamic_models/base/: fblin_6dof_model.cpp  fblin_6dof_model.hpp
include/UUVs/: vtec_u4_model_nodelet.hpp
launch/: vtec_u4_antsmc.launch  vtec_u4_asmc.launch  vtec_u4_model.launch  vtec_u4_nodelet.launch  vtec_u4_pid.launch
launch/rviz_cfg/: uuv.rviz
models/: vtec_u3.urdf
simulation/: 6dof_tf2_broadcaster.cpp  tf2_6dof_broadcaster.cpp  tf2_6dof_broadcaster_ros2.cpp  tf2_6dof_broadcaster_ros2.hpp
simulation/base/: tf2_6dof_broadcaster.cpp  tf2_6dof_broadcaster.hpp  tf2_6dof_broadcaster_ros2.cpp  tf2_6dof_broadcaster_ros2.hpp
simulation/car_tfs/: sdc1_broadcaster.cpp  sdc1_broadcaster.hpp
simulation/include/: 6dof_tf2_broadcaster.hpp
simulation/src/: 6dof_tf2_broadcaster.cpp
src/: uuv_asmc_node.cpp  uuv_master_node.cpp  uuv_pid_control_node.cpp  uuv_simulation_node.cpp  uuv_waypoint_publisher_node.cpp
src/UUVs/: 6dof_tf2_broadcast_node.cpp  uuv_tf2_broadcast_node.cpp  uuv_waypoint_publisher_node.cpp
test/: 6dof_vtec_u4_pid_test.cpp
utils/: utils.cpp  utils.hpp
uuv_motion_planning/include/: waypoint_publisher.hpp
(+186 files in other folders)
