<?xml version="1.0"?>
<package format="2">
  <name>vanttec_controllers</name>
  <version>0.0.0</version>
  <description>The vanttec_controllers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="saveasmtz@todo.todo">saveasmtz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/vtec_u4_model_nodelet.xml"/>
  </export>
</package>
